# lattice-sis-zkp-protocol

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  simple_example.cpp
include/protocol/: lattice_proof.hpp  parameters.hpp  utils.hpp
src/: lattice_proof.cpp  parameters.cpp  utils.cpp
tests/: CMakeLists.txt  basic_tests.cpp  main_test.cpp  performance_tests.cpp  test_protocol.cpp  test_utils.hpp
